# rgb2yuv-intrinsics

./: .gitignore  Makefile  Makefile.in  configure  configure.ac  rgb2yuv-intrinsics  rgb2yuv-intrinsics.c
doc/: Makefile.am  Makefile.in  README  image.rgb  output.yuv  sample_640x480.rgb  sample_640x480.yuv
src/: Makefile.am  Makefile.in  rgb2yuv-intrinsics.cpp
